--- a/site/index.html
+++ b/site/index.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css" />
     
-    <link rel="stylesheet" type="text/css" href="css/pattern-4.css" />
+    <link rel="stylesheet" type="text/css" href="css/pattern.css" />
     <!--[if IE]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -93,8 +93,8 @@
                         <div class="card__content">
 							<i class="card__btn-close fa fa-times"></i>
 							<div class="card__caption">
-								<h2 class="card__title">Tutorial One</h2>
-								<p class="card__subtitle">Hello World Tutorial</p>
+								<h2 class="card__title">Tutorial #0</h2>
+								<p class="card__subtitle">Installation & Development Environment Setup</p>
 							</div>
 							<div class="card__copy">
 								<div class="meta">
@@ -126,8 +126,8 @@
                         <div class="card__content">
                             <i class="card__btn-close fa fa-times"></i>
                             <div class="card__caption">
-                                <h2 class="card__title">Tutorial Two</h2>
-                                <p class="card__subtitle">Re-create this website</p>
+                                <h2 class="card__title">Tutorial #1</h2>
+                                <p class="card__subtitle">Angular Multi-Timer App on Free Domain Name</p>
                             </div>
                             <div class="card__copy">
                                 <div class="meta">
