--- a/site/index.html
+++ b/site/index.html
@@ -26,7 +26,7 @@
         <meta property="og:image:width"       content="850">
         <meta property="og:image:height"       content="800">
 	<meta property="og:video" content="https://learn-angular-2021.com/index.gif">
-	<meta property="og:video:secure_url content="https://learn-angular-2021.com/index.gif">
+	<meta property="og:video:secure_url" content="https://learn-angular-2021.com/index.gif">
         <meta property="og:video:width"          content="425">
         <meta property="og:video:height"         content="400">
 
